# catapult

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
catapult/: app.py  cli.py  configuration.py  controller.py  metadata.py
catapult/utils/: archive.py  fileutil.py
docker/: Dockerfile  Dockerfile.worker
integration/: docker-compose.yml  setup.sh  teardown.sh
integration/tests/lanraragi/: test_lanraragi_client.py
src/catapult/: __init__.py  cache.py  cli.py  configuration.py  constants.py  controller.py  metadata.py  models.py  tasks.py  utils.py
src/catapult/connections/: common.py  nhentai_archivist.py  pixivutil2.py
src/catapult/lanraragi/: __init__.py  client.py  constants.py  models.py  utils.py
src/catapult/satellite/: app.py
src/catapult/services/: common.py  nhentai_archivist.py
src/catapult/utils/: __init__.py  archive.py  fileutil.py  image_processing.py
tests/: test_lanraragi_utils.py  test_utils.py
tests/resources/: fake.cbz
