[build-system]
requires = ["setuptools >= 74.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "catapult"
version = "0.5.0"
authors = [
    {name="psilabs-dev"}
]
description = "A LANraragi file upload client."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10, <3.13"
dynamic = [
    "dependencies"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "tox>=4.23.0",
    "ruff"
]
satellite = [
    "fastapi[standard]==0.110.0"
]

[project.scripts]
catapult = "catapult.cli:main"

[project.urls]
Homepage = "https://github.com/psilabs-dev/catapult"

[tool.ruff]
extend-select = ["ASYNC", "C4", "SIM", "TCH"]
show-fixes = true
ignore = ["ASYNC230"] # use normal blocking open, aiofiles may be too slow.
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]